# sml-ocaml-converter

./: .gitignore  .ugrep  2026-02-03-make-it-so-that-this-does-the-following.txt  BACKEND_IMPLEMENTATION_STATUS.md  BACKEND_STUBS.md  CHANGES.md  LICENSE  LIMITS.md  Makefile  OCAMLDOC.txt  README.md  TODO  USAGE.md  copilot-session-1ee449a4-5843-413c-afa1-8379923d2ad4.md  dune-project  dune-workspace  files.t  fixes.txt  fixes2.txt  fixes3.txt  odoc-config.sexp  output1.txt  output2.txt  shibboleth.opam  sml-ocaml-converter.opam  sml.txt  test_comment.ml  test_comment.sml  test_comment_fixed.ml  test_constructor_pattern.sml  test_longident.ml  test_no_comment.ml  test_no_comment.sml  test_parse_infix.ml  test_parse_infix.sml  test_seq.ml  test_seq.sml  test_simple.ml  test_simple.sml  test_trace.ml  (+4 more)
.claude/agents/: ocaml-ast-generator.md  ocaml-odoc-generator.md  ocaml-test-generator.md
.github/: copilot-instructions.md
docs/: BACKEND_DOCUMENTATION.md  BACKEND_IMPLEMENTATION_STATUS.md  BACKEND_STUBS.md  cm_to_dune.mld  dune  index.mld  names.mld  overview.mld  sml.txt
docs/plans/: 2026-01-20-parsetree-formatter-design.md  2026-01-21-logger-filtering-design.md  2026-01-24-format-ml-simplification-design.md  2026-01-25-format-combinator-refactoring.md  2026-01-26-backend-refactoring-design.md  2026-02-03-constructor-tracking-design.md  2026-02-03-constructor-tracking-implementation.md  2026-02-04-operator-precedence-design.md  2026-02-04-operator-precedence.md
examples/: TestSetup.mk
examples/wiki/: package-lock.json  package.json
lib/: dune  index.mld  shibboleth.ml  shibboleth.mli  sml_ocaml_converter.ml  sml_ocaml_converter.mli
lib/ast/: ast.ml  dune
lib/backend/: backend.ml  backend.mli  backend_sig.ml  dune  process_names.ml  process_names.mli  process_names.mli~
lib/format_lib/: dune  format_attrs.ml  format_class_expr.ml  format_class_type.ml  format_core_type.ml  format_expression.ml  format_flags.ml  format_ident.ml  format_lib.ml  format_module_expr.ml  format_module_type.ml  format_pattern.ml  format_type_decl.ml  format_types.ml  format_utils.ml  format_views.ml
lib/process/: dune  index.mld  process.ml  process.mli  process_common.ml  process_common.mli  process_dir.ml  process_dir.mli  process_file copy.ml  process_file.ml  process_file.mli  process_group.ml  process_group.mli
lib/source/backend/: backend.ml  backend.mli  backend_common.ml  backend_common.mli  backend_const.ml  backend_const.mli  backend_constants.ml  backend_constants.mli  backend_context.ml  backend_context.mli  backend_sig.ml  backend_types.ml  backend_types.mli  backend_utils.ml  backend_utils.mli  capital_utils.ml  capital_utils.mli  constructor_transform.ml  constructor_transform.mli  dune  idx_utils.ml  idx_utils.mli  index.mld  name_processor.ml  name_processor.mli  precedence_resolver.ml  precedence_resolver.mli  process_label.ml  process_label.mli  process_names.ml  process_names.mli  type_var_utils.ml  type_var_utils.mli
lib/source/frontend/: dune  frontend.ml  frontend.mli  index.mld  lexer.mll  parser.mly  utils.ml
test/: dune  test_sml_ocaml_converter.ml
test/file_tests/: dune  file1.ml  file10.ml  file11.ml  file12.ml  file13.ml  file14.ml  file15.ml  file16.ml  file17.ml  file18.ml  file19.ml  file2.ml  file20.ml  file21.ml  file22.ml  file23.ml  file24.ml  file3.ml  file4.ml  file5.ml  file6.ml  file7.ml  file8.ml  file9.ml  file_tests.ml  test_common.ml
test/file_tests/data/: file10_input.sml  file11_input.sml  file12_input.sml  file13_input.sml  file14_input.sml  file15_input.sml  file16_input.sml  file17_input.sml  file18_input.sml  file19_input.sml  file1_input.sml  file20_input.sml  file21_input.sml  file22_input.sml  file24_input.sml  file2_input.sml  file3_input.sml  file4_input.sml  file5_input.sml  file6_input.sml  file7_input.sml  file8_input.sml  file9_input.sml
test/unit_tests/: README.md  dune  test_constructor_manifest.ml  test_constructor_registry.ml  test_constructor_transform.ml  unit_tests.ml  unit_tests_.ml
(+97 files in other folders)
