(library
 (public_name shibboleth.process)
 (name process)
 (modules
  process
  process_common
  process_file
  process_dir
  process_group
  process_cm)
 (libraries
  ppx_deriving
  containers
  fpath
  bos
  polish
  common
  backend
  context
  frontend
  helpers
  ocaml)
 (preprocess
  (pps ppx_deriving.show)))
