(test
 (name file_tests)
 (libraries
  cli
  alcotest
  shibboleth
  ast
  backend
  helpers
  compiler-libs.common
  ppxlib)
 (modules
  file_tests
  test_common
  file1
  file2
  file3
  file4
  file5
  file6
  file7
  file8
  file9
  file10
  file11
  file12
  file13
  file14
  file15
  file16
  file17
  file18
  file19
  file20
  file21
  file22
  file23
  file24))
