(test
 (name unit_tests)
 (libraries
  cli
  alcotest
  ast
  backend
  helpers
  compiler-libs.common
  ppxlib
  process
  frontend
  common
  polish
  context))

(executable
 (name test_constructor_registry)
 (modules test_constructor_registry)
 (libraries alcotest context))

(executable
 (name test_constructor_manifest)
 (modules test_constructor_manifest)
 (libraries alcotest context))
