(ocamllex lexer)

(library
 (public_name shibboleth.frontend)
 (name frontend)
 (libraries ast common menhirLib)
 (modules frontend tokens utils lexer parser))

(menhir
 (modules parser)
 (explain true))
(env 
  ( checkparser 
   (menhir 
    (flags 
     ( --table --explain --comment -la 2 --trace -lc 2 --dump --dump-resolved)))
   )
  ( _ 
   (menhir (flags ( --table --dump)))
   )
 )